# Mcp-project

./: .env.example  .gitignore  .gitlab-ci.yml  .webui_secret_key  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-run-tests.ps1  openapi.json  pyproject.toml  request.json  requirements.txt  sqltest.sql  start_openwebui.ps1  test_sql.py
docs/: MYREF.md  MYREF3.md  SECURITY.md  connection.md  todo.md
langfuse/: docker-compose.yml
src/: __init__.py
src/traksys_mcp/: __init__.py  __main__.py  server.py
src/traksys_mcp/config/: logging_setup.py  setting.py
src/traksys_mcp/core/: database.py  exceptions.py  health.py  utils.py
src/traksys_mcp/models/: responses.py  tool_inputs.py  tool_outputs.py
src/traksys_mcp/services/: analysis.py  batches.py  data_availability.py  langfuse_tracing.py  materials.py  performance.py  product.py  tasks.py  time_resolution.py
team-project-website/: next.config.ts  package-lock.json  package.json
team-project-website/app/: globals.css  page.tsx
team-project-website/components/: Footer.tsx  Navbar.tsx
tests/: inputs.csv  traksys_dashboard.html  traksys_eval.py  traksys_tool_feed.html
tests/data/: test_queries.csv
tests/promptfoo/: inputs.csv  promptfooconfig.yaml  run_tests.py  verifier.py
traksys-agent/: main.py
traksys-agent/agent/: function_registry.py  openai_client.py  orchestrator.py
traksys-agent/api/: routes.py
traksys-agent/config/: settings.py
traksys-agent/mcp/: client.py  subprocess_manager.py
traksys_agent/: main.py  requirements.txt
traksys_agent/agent/: function_registry.py  openai_client.py  orchestrator.py
traksys_agent/api/: models.py  routes.py
traksys_agent/config/: settings.py
traksys_agent/mcp/: client.py  protocol.py  subprocess_manager.py
(+22 files in other folders)
